cabal-version: 2.2
name: app
version: 0.1.0.0
synopsis: Sample miso app
category: Web

common wasm
  if arch(wasm32)
    ghc-options:
      -no-hs-main
      -optl-mexec-model=reactor
      "-optl-Wl,--export=hs_start"
    cpp-options:
      -DWASM

executable app
  import:
    wasm
  main-is:
    Main.hs
  build-depends:
    base, miso,
    servant,
    servant-server,
    wai,
    warp,
    wai-extra,
    lucid,
    bytestring,
    text,
    aeson,
    network-uri
  default-language:
    Haskell2010